# fastapi-postgres-realworld

./: .env  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  realworld-tests.yml
realworld/: .gitignore
realworld/.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml
realworld/.github/workflows/: deploy-documentation.yml  test-documentation.yml
realworld/api/: run-api-tests.sh
realworld/documentation/: docusaurus.config.js
realworld/documentation/docs/: intro.mdx
realworld/documentation/docs/implementation-creation/: expectations.md  features.md  introduction.md
realworld/documentation/docs/specs/frontend-specs/: templates.md
realworld/documentation/src/pages/: index.js
scripts/: start.sh
src/: __init__.py  api.py  main.py  settings.py
src/core/: __init__.py  article.py  comment.py  exceptions.py  tag.py
src/endpoints/: __init__.py  article.py  comment.py  profile.py  tag.py  user.py
src/models/: __init__.py  article.py  models.py  user.py
src/schemas/: __init__.py  article.py  base.py  comment.py  tag.py  user.py
src/utils/: security.py
