[tool.poetry]
name = "fastapi-odmantic-example"
version = "0.1.0"
description = ""
authors = ["Arthur Pastel <arthur.pastel@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
odmantic = { git = "https://github.com/art049/odmantic.git" }

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.12.0"
black = "^23"
flake8 = "^5.0.4"
mypy = "^1.0.1"
pytest-asyncio = "^0.19.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
